--- a/TaskManagerApi/TaskManagerApi.csproj
+++ b/TaskManagerApi/TaskManagerApi.csproj
@@ -1,14 +1,11 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Models\Responses\" />
-    <Folder Include="Models\Requests\" />
     <Folder Include="Mappings\" />
-    <Folder Include="NewFolder\" />
     <Folder Include="Repositories\" />
   </ItemGroup>
 
