--- a/TaskManager/TaskManager.csproj
+++ b/TaskManager/TaskManager.csproj
@@ -16,6 +16,7 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.4" />
     <PackageReference Include="Telerik.UI.for.AspNet.Core.Trial" Version="2020.1.406" />
   </ItemGroup>
 
