--- a/TaskManagerApp/appsettings.json
+++ b/TaskManagerApp/appsettings.json
@@ -1,5 +1,5 @@
 ﻿{
-  "API_URL": "https://localhost:44307/",
+  "API_URL": "https://localhost:44307/api/",
   "Logging": {
     "IncludeScopes": false,
     "LogLevel": {
