--- a/TaskManagerApp/appsettings.json
+++ b/TaskManagerApp/appsettings.json
@@ -1,6 +1,6 @@
 ﻿{
-  //"API_URL": "https://localhost:44307/api/",
-  "API_URL": "http://taskmanagerapi.com/api/",
+  "API_URL": "https://localhost:44307/api/",
+  //"API_URL": "http://taskmanagerapi.com/api/",
   "Logging": {
     "IncludeScopes": false,
     "LogLevel": {
