--- a/TaskManagerApp/TaskManagerApp.csproj
+++ b/TaskManagerApp/TaskManagerApp.csproj
@@ -22,6 +22,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="3.1.9" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.4" />
+    <PackageReference Include="Moment.js" Version="2.29.1" />
     <PackageReference Include="Telerik.UI.for.AspNet.Core.Trial" Version="2020.1.406" />
   </ItemGroup>
 
