--- a/TaskManagerApi/appsettings.json
+++ b/TaskManagerApi/appsettings.json
@@ -1,7 +1,7 @@
 {
   "connectionStrings": {
-    //"TaskManagerConnection": "Server = DESKTOP-BJFCBJ3; Database = DBTaskManager; Trusted_Connection = True"
-    "TaskManagerConnection": "Server = DESKTOP-8NT7NAV\\SQLEXPRESS; Database = DBTaskManager; Trusted_Connection = True"
+    "TaskManagerConnection": "Server = sql9.freemysqlhosting.net; Database = sql9373616; user = sql9373616; Password = t4B9Uk2w8h;"
+    //"TaskManagerConnection": "Server = DESKTOP-8NT7NAV\\SQLEXPRESS; Database = DBTaskManager; Trusted_Connection = True"
   },
   "Logging": {
     "LogLevel": {
