Order combo boxes by ascending

--- a/TaskManagerApi/TaskManagerApi.csproj
+++ b/TaskManagerApi/TaskManagerApi.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
+    <UserSecretsId>b0764a0f-897b-46f9-8537-2e8403800e21</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
